<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/default_background">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="100dp"
            tools:context=".ui.presentation.login.LoginFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/entryText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/enter"
                    android:textColor="@color/white"
                    android:textSize="28sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/emailPlaceholder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:text="Email"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/entryText" />

                <EditText
                    android:id="@+id/emailField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:height="40dp"
                    android:inputType="text"
                    android:background="@drawable/rounded_border"
                    android:hint="@string/email_placeholder"
                    android:singleLine="true"
                    android:scrollHorizontally="true"
                    android:paddingLeft="16dp"
                    android:paddingTop="11dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="11dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/hint_color"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/emailPlaceholder"
                    app:layout_constraintStart_toStartOf="@+id/emailPlaceholder"
                    app:layout_constraintTop_toBottomOf="@+id/emailPlaceholder" />

                <TextView
                    android:id="@+id/passwordPlaceholder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/password"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailField" />

                <EditText
                    android:id="@+id/password_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:height="40dp"
                    android:background="@drawable/rounded_border"
                    android:hint="@string/enter_password_placeholder"
                    android:singleLine="true"
                    android:scrollHorizontally="true"
                    android:inputType="textPassword"
                    android:paddingLeft="16dp"
                    android:paddingTop="11dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="11dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/hint_color"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/passwordPlaceholder"
                    app:layout_constraintStart_toStartOf="@+id/passwordPlaceholder"
                    app:layout_constraintTop_toBottomOf="@+id/passwordPlaceholder" />

                <Button
                    android:id="@+id/entryButton"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/rounded_button"
                    android:backgroundTint="@color/entry_button_color"
                    android:enabled="false"
                    android:text="@string/enter"
                    android:textColor="@android:color/white"
                    app:layout_constraintEnd_toEndOf="@+id/password_field"
                    app:layout_constraintStart_toStartOf="@+id/password_field"
                    app:layout_constraintTop_toBottomOf="@+id/password_field" />

                <LinearLayout
                    android:id="@+id/registry_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="@+id/entryButton"
                    app:layout_constraintStart_toStartOf="@+id/entryButton"
                    app:layout_constraintTop_toBottomOf="@+id/entryButton">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/noAccPlaceholder"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/have_not_account"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/registration"
                            android:textColor="@color/green"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/forgot_password"
                        android:textColor="@color/green"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:id="@+id/break_line"
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:layout_marginTop="32dp"
                    android:background="@color/blue_grey"
                    app:layout_constraintTop_toBottomOf="@+id/registry_container" />


                <!-- Social buttons -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/break_line">

                    <Button
                        android:id="@+id/vkButton"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/vk_rounded_border" />

                    <Button
                        android:id="@+id/okButton"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/ok_rounded_border" />
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>