<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#151515"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp">


        <TextView
            android:id="@+id/profileTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/profileTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/rounded_border_course_item">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:clipToPadding="false">

                <!-- Пункт 1 -->
                <LinearLayout
                    android:id="@+id/item_support"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="16dp">

                    <TextView
                        android:id="@+id/text_support"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/write_to_support"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/arrow_right" />
                </LinearLayout>

                <!-- Разделитель -->
                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="16dp"
                    app:dividerColor="@color/light_grey"/>

                <!-- Пункт 2 -->
                <LinearLayout
                    android:id="@+id/item_settings"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="16dp">

                    <TextView
                        android:id="@+id/text_settings"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/settings"
                        android:textColor="#E6E6E6"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/arrow_right" />
                </LinearLayout>

                <!-- Разделитель -->
                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="16dp"
                    app:dividerColor="@color/light_grey"/>

                <!-- Пункт 3 -->
                <LinearLayout
                    android:id="@+id/item_logout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="16dp">

                    <TextView
                        android:id="@+id/text_logout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/logout"
                        android:textStyle="bold"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/arrow_right" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/yourCourses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/your_courses"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/coursesRV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yourCourses"
            tools:listitem="@layout/course_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>