<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_border_course_item"
    android:layout_marginBottom="16dp"
    android:layout_height="236dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/image_wrapper"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="114dp"
        app:cardCornerRadius="12dp">
        <ImageView
            android:id="@+id/image"
            android:src="@drawable/img_kind_of_cool_boy"
            android:scaleType="centerCrop"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ImageView>
    </com.google.android.material.card.MaterialCardView>


    <LinearLayout
        android:id="@+id/rating_wrapper"
        android:orientation="horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="2dp"
        android:layout_width="wrap_content"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="@id/image_wrapper"
        app:layout_constraintStart_toStartOf="@id/image_wrapper"
        android:background="@drawable/background_corner_blur"
        android:layout_height="22dp">

        <ImageView
            android:layout_gravity="center_vertical"
            android:src="@drawable/star_fill"
            android:layout_marginStart="6dp"
            android:layout_width="12dp"
            android:layout_height="12dp"/>

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="6dp"
            android:textColor="#F2F2F3"
            android:gravity="top|center_horizontal"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description"
            tools:text="4.9" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="2dp"
        android:layout_width="wrap_content"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="@id/image_wrapper"
        app:layout_constraintStart_toEndOf="@id/rating_wrapper"
        android:background="@drawable/background_corner_blur"
        android:layout_height="22dp">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:textColor="#F2F2F3"
            android:gravity="top|center_horizontal"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description"
            tools:text="@string/course_item_date" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/favoriteWrapper"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:elevation="2dp"
        android:layout_width="28dp"
        android:layout_height="28dp"
        app:layout_constraintTop_toTopOf="@id/image_wrapper"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/background_corner_blur">

        <ImageView
            android:id="@+id/favoriteButton"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/bookmark"
            android:gravity="center"
            android:layout_gravity="center"/>
    </FrameLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="12dp"
        android:paddingBottom="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_wrapper">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textFontWeight="500"
            android:textColor="#F2F2F3"
            android:textSize="16sp"
            android:letterSpacing="0.015"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/course_item_title" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:maxLines="2"
            android:textColor="#F2F2F3"
            android:textSize="12sp"
            android:marqueeRepeatLimit="marquee_forever"
            android:ellipsize="end"
            android:letterSpacing="0.04"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:text="@string/course_description" />

        <TextView
            android:id="@+id/pay_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:textColor="#F2F2F3"
            android:letterSpacing="0.015"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description"
            tools:text="999 ₽" />

        <TextView
            android:id="@+id/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColor="@color/green"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/arrow_more"
            app:layout_constraintTop_toTopOf="@id/arrow_more"
            app:layout_constraintBottom_toBottomOf="@+id/arrow_more"
            android:textStyle="bold"
            android:letterSpacing="0.04"
            android:text="@string/more" />
        <ImageView
            android:paddingTop="4dp"
            android:id="@+id/arrow_more"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="10dp"
            android:src="@drawable/arrow_right_short_fill"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>